examples/errors/return_type_mismatch_function/main.hd
fn is_positive(x: int): bool {
    return x;
}

fn main(): int {
    return 0;
}
